Fixed null ref, added debug/incomplete gwenith glide routes, few new menu swaps